2008-02-08  Rodney Dawes  <dobey@wayofthemonkey.com>

        Reviewed by Jon Honeycutt.

        Redefine some platform-specific types as cross-platform types
        Add pathGetFileName method to get the filename from a path string
        Add unloadModule method to unload a loadable module from the process
        Implement new methods for GTK+ and Windows
        Implement missing homeDirectoryPath method for GTK+
        Add stub methods for new and missing methods for Wx and Qt

        * platform/FileSystem.h:
        * platform/gtk/FileSystemGtk.cpp:
        * platform/qt/FileSystemQt.cpp:
        * platform/win/FileSystemWin.cpp:
        * platform/wx/FileSystemWx.cpp:

2008-02-08  Adam Roben  <aroben@apple.com>

        Windows build fix after r30088

        * bindings/scripts/CodeGeneratorCOM.pm: Touch this to force the COM
        bindings to rebuild.

2008-02-08  Pierre-Luc Beaudoin  <pierre-luc.beaudoin@collabora.co.uk>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17009
        [Gtk] Webkit strips accents from some dead-key combinations

        KeyEvents have to go through the gtk input method.

        Also implement the isKeypad check and make disambiguateKeyDownEvent
        behave more like other ports.

        * platform/PlatformKeyboardEvent.h:
        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        (WebCore::PlatformKeyboardEvent::disambiguateKeyDownEvent):
        (WebCore::PlatformKeyboardEvent::gdkEventKey):

2008-02-08  Darin Adler  <darin@apple.com>

        Reviewed by Eric.

        - fix http://bugs.webkit.org/show_bug.cgi?id=3492
          TreeWalker implementation needs to be fixed (affects Acid3)
        - fix http://bugs.webkit.org/show_bug.cgi?id=4714
          NodeIterator does not handle exceptions from the filter function (affects Acid3)
        - fix http://bugs.webkit.org/show_bug.cgi?id=4716