@@ -1,3 +1,13 @@
+2008-02-08  David Hyatt  <hyatt@apple.com>
+
+        Fix for bug 16798, button should default to type=submit.
+
+        Reviewed by darin
+
+        * html/HTMLButtonElement.cpp:
+        (WebCore::HTMLButtonElement::type):
+        (WebCore::HTMLButtonElement::parseMappedAttribute):
+
 2008-02-08  Rodney Dawes  <dobey@wayofthemonkey.com>
 
         Reviewed by Jon Honeycutt.
